# frontend/openapi/gateforge.openapi.yaml
@@ -580,7 +580,7 @@ components:
 paths:
   /api/apicast/analyze/{namespace}/{name}:
     get:
-      operationId: analyze
+      operationId: analyzeApicast
       parameters:
       - name: name
         in: path
@@ -930,7 +930,7 @@ paths:
       - Hub Resource
   /api/migration/analyze:
     post:
-      operationId: analyze
+      operationId: analyzeMigration
       requestBody:
         content:
           application/json:
